--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,14 @@ body {
   flex-direction: column;
 }
 
+#light{
+  background-color: #ffffff;
+}
+
+#dark{
+ 
+}
+
 h1 {
   font-size: 3rem;
   letter-spacing: 0.9px;
