--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,14 @@ h1 {
   width: fit-content;
 }
 
+#light h1{
+  background: linear-gradient(
+    90deg,
+    rgba(249, 211, 180, 0) 0%
+    rgba(249, 211, 180, 1) 100%,
+  );
+}
+
 .search {
   width: 71%;
   margin: 4rem 0 2rem;
@@ -63,6 +71,11 @@ h1 {
   box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
 }
 
+#light .search{
+  background: #a1a1a1;
+  box-shadow:none
+}
+
 .search input {
   flex: 1;
   border: none;
@@ -74,6 +87,11 @@ h1 {
   outline: none;
   color: #a1a1a1;
   background: #1f2123;
+}
+
+#light .search input{
+  color: #1f2123;
+  background: #a1a1a1;
 }
 
 .search img {
